yarn add stimulus

--- a/public/package.json
+++ b/public/package.json
@@ -1,5 +1,8 @@
 {
     "scripts": {
         "build": "webpack --display-error-details"
+    },
+    "dependencies": {
+        "stimulus": "^1.1.1"
     }
 }
