--- a/public/package.json
+++ b/public/package.json
@@ -3,6 +3,7 @@
         "build": "webpack --display-error-details"
     },
     "dependencies": {
-        "stimulus": "^1.1.1"
+        "stimulus": "^1.1.1",
+        "webpack": "^4.29.6"
     }
 }
