--- a/public/package.json
+++ b/public/package.json
@@ -4,6 +4,7 @@
     },
     "dependencies": {
         "stimulus": "^1.1.1",
-        "webpack": "^4.29.6"
+        "webpack": "^4.29.6",
+        "webpack-cli": "^3.2.3"
     }
 }
